--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
   </head>
-  <body class="bg-white">
-    <div id="root"></div>
+  <body>
+    <div id="root" class="bg-white"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
